--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 <body>
     <header>
-        <img src="c:/Users/yaros/OneDrive/Рабочий стол/lab_web/lablogo.jpg" height="50" alt="Logo">
+        <img src="lablogo.jpg" height="50" alt="Logo">
         <nav>
             <a href="Project.html">Головна</a>
             <a href="https://www.instagram.com/yaroslav23_sp/">Про нас</a>
